src/main/kotlin/com/example/hhplusweek3/error/NotFoundException.kt
package com.example.hhplusweek3.error

class NotFoundException(message: String) : RuntimeException(message)
